styled the nav bar and managed to amend the font color. Also debugged the issue with the footer overlapping the section above

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,9 @@
    
 }
 
-
+.navbar-custom {
+    color: #556B2F;
+}
 
 /* ----------------------------------------------------taken from: Beyond Bootstap - Updating Callout */
 #hero-image {
@@ -82,7 +84,7 @@ footer {
     background-color: #fafafa;
     min-height: 120px;
     margin: 0;
-    padding-top: 20px;
+    padding: 20px;
     color: #556B2F;
     text-align: center;
     overflow: auto;
@@ -166,3 +168,9 @@ h4 {
     color:#556B2F;
     font-family: "Montserrat", sans-serif;
 }
+
+body {
+    padding-bottom: 250px;
+}
+
+
